aligning the text to the center

--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<h1 style="font-family: sans-serif">Max challange for monday, december, 22</h1>
+<h1 style="font-family: sans-serif; text-align: center;">Max challange for monday, december, 22</h1>
 <p>lern about basics of web development </p>
