--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <h1 style="font-family: sans-serif; text-align: center; color: blue">Max challange for monday, december, 22</h1>
-<p style="font-family: sans-serif; text-align: center; color: darkgray">lern about basics of web development </p>
+<p style="font-family: sans-serif; text-align: center; color: #534b4b">lern about basics of web development </p>
