adding a new paragrph with a link

--- a/index.html
+++ b/index.html
@@ -3,5 +3,10 @@ Max challange for monday, december, 22
 </h1>
 
 <p style="font-family: sans-serif; text-align: center; color: #534b4b">
-lern about basics of web development 
+learn about basics of web development 
+</p>
+
+<p style="font-family: sans-serif; text-align: center; color: #534b4b">
+DO NOT CLICK THIS 
+<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">LINK</a>!!!
 </p>
