adding the global CSS styles

--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
-<h1 style="font-family: sans-serif; text-align: center; color: #383839">
+<style>
+
+    h1{
+        font-family: sans-serif;
+        text-align: center;
+        color: #534b4b
+
+    }
+
+    p{
+        font-family: sans-serif; 
+        text-align: center; 
+        color: #534b4b
+    }
+</style>
+
+<h1>
 Max challange for monday, december, 22
 </h1>
 
-<p style="font-family: sans-serif; text-align: center; color: #534b4b">
+<p>
 learn about basics of web development 
 </p>
 
-<p style="font-family: sans-serif; text-align: center; color: #534b4b">
+<p>
 DO NOT CLICK THIS 
 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">LINK</a>!!!
 </p>
