--- a/index.html
+++ b/index.html
@@ -14,7 +14,17 @@
                 font-family: sans-serif; 
                 text-align: center; 
                 color: #534b4b
+                
             }
+
+            a {
+                color: rgb(167, 1, 78);
+                text-decoration: none;
+              }
+            
+            a:hover {
+                      text-decoration: underline;
+                    }
         </style>
         <title>My website</title>
     </head>
