--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             </p>
             
             <p>
-            DO NOT CLICK THIS 
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">LINK</a>!!!
+             i'll achive this goal by diving into more learning  
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">more learning resources</a>
             </p>
     </body>
 </html>
