--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <title>My website</title>
     </head>
     <body>
+        <img src="challenges-trophy.jpg" alt="A trophy">
         <h1>
             Max challange for monday, december, 22
             </h1>
@@ -19,7 +20,7 @@
             
             <p>
              i'll achive this goal by diving into more learning  
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">more learning resources</a>
+            <a href="https://www.google.com/">more learning resources</a>
             </p>
     </body>
 </html>
