linking the new file to the old file and updating some code

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <meta charset="UTF-8">
         <link href="WebsiteStyles.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,8 +20,8 @@
             </p>
             
             <p>
-             i'll achive this goal by diving into more learning  
-            <a href="https://www.google.com/">more learning resources</a>
+             Explore the 
+            <a href="indextwo.html">full week</a>
             </p>
     </body>
 </html>
