--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
             </h1>
             
             <p id="todays-challenge">
-            learn about basics of web development 
+            Work as a web developer
             </p>
             
             <p>
-             Explore the 
-            <a href="indextwo.html">full week</a>
+             The 
+            <a href="indextwo.html">plan</a>
             </p>
     </body>
 </html>
