--- a/indextwo.html
+++ b/indextwo.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="WebsiteStyles.css" rel="stylesheet">
     <meta charset="UTF-8">
     <title>my other site</title>
 </head>
 <body>
+    <h1>Chellanges to overcome</h1>
     
+
 </body>
 </html>
