making a link for the old page

--- a/indextwo.html
+++ b/indextwo.html
@@ -8,6 +8,11 @@
 <body>
     <h1>Chellanges to overcome</h1>
     
+    <p>Compleate the chellange form the 
+        <a href="index.html">1st page</a>
+   </p>
+   
+    
 
 </body>
 </html>
