writing down the goals

--- a/indextwo.html
+++ b/indextwo.html
@@ -11,7 +11,19 @@
     <p>Compleate the chellange form the 
         <a href="index.html">1st page</a>
    </p>
-   
+
+   <p id="Goal">
+    100 days = Learn web development
+</p>
+
+<p id="Goal">
+    200 days = Get a job
+</p>
+
+<p id="Goal">
+    300 days = make money $$$
+</p>
+
     
 
 </body>
