adding the font, working with styles, adding small changes and finnishing the project

--- a/indextwo.html
+++ b/indextwo.html
@@ -3,6 +3,11 @@
 <head>
     <link href="WebsiteStyles.css" rel="stylesheet">
     <meta charset="UTF-8">
+    <link href="WebsiteStyles.css" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=Oswald:wght@700&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
     <title>my other site</title>
 </head>
 <body>
@@ -17,11 +22,11 @@
 </p>
 
 <p id="Goal">
-    200 days = Get a job
+    200 days = work on personal projects and upload them to github
 </p>
 
 <p id="Goal">
-    300 days = make money $$$
+    300 days = get a job and make some cash $$$
 </p>
 
     
