--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link href="WebsiteStyles.css" rel="stylesheet">
+        <link href="styles/WebsiteStyles.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=Oswald:wght@700&display=swap" rel="stylesheet">
@@ -10,7 +10,7 @@
         <title>My website</title>
     </head>
     <body>
-        <img src="challenges-trophy.jpg" alt="A trophy">
+        <img src="images/challenges-trophy.jpg" alt="A trophy">
         <h1>
             Max challange for monday, december, 22
             </h1>
