--- a/indextwo.html
+++ b/indextwo.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="WebsiteStyles.css" rel="stylesheet">
+    <link href="/styles/WebsiteStyles.css" rel="stylesheet">
     <meta charset="UTF-8">
-    <link href="WebsiteStyles.css" rel="stylesheet">
+    <link href="styles/WebsiteStyles.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=Oswald:wght@700&display=swap" rel="stylesheet">
