--- a/indextwo.html
+++ b/indextwo.html
@@ -17,17 +17,11 @@
         <a href="index.html">1st page</a>
    </p>
 
-   <p id="Goal">
-    100 days = Learn web development
-</p>
-
-<p id="Goal">
-    200 days = work on personal projects and upload them to github
-</p>
-
-<p id="Goal">
-    300 days = get a job and make some cash $$$
-</p>
+<ol>
+    <li>100 days = Learn web development</li>
+    <li>200 days = work on personal projects and upload them to github</li>
+    <li>300 days = get a job and make some cash $$$</li>
+</ol>
 
     
 
