--- a/indextwo.html
+++ b/indextwo.html
@@ -21,9 +21,18 @@
 
 
 <ol>
-    <li>100 days = Learn web development</li>
-    <li>200 days = work on personal projects and upload them to github</li>
-    <li>300 days = get a job and make some cash $$$</li>
+    <li>
+        <h2>june 14th 2023</h2>
+        <p id="listP">100 days = Learn web development</p>
+    </li>
+    <li>
+        <h2>november 14th 2023</h2>
+        <p id="listP">200 days = work on personal projects and upload them to github</p>
+    </li>
+    <li>
+        <h2>april 14th 2024</h2>
+        <p id="listP">300 days = get a job and make some cash $$$</p>
+    </li>
 </ol>
 
     
