--- a/indextwo.html
+++ b/indextwo.html
@@ -23,15 +23,15 @@
 <ol>
     <li>
         <h2>june 14th 2023</h2>
-        <p id="listP">100 days = Learn web development</p>
+        <p class="goal">100 days = Learn web development</p>
     </li>
     <li>
         <h2>november 14th 2023</h2>
-        <p id="listP">200 days = work on personal projects and upload them to github</p>
+        <p>200 days = work on personal projects and upload them to github</p>
     </li>
     <li>
         <h2>april 14th 2024</h2>
-        <p id="listP">300 days = get a job and make some cash $$$</p>
+        <p>300 days = get a job and make some cash $$$</p>
     </li>
 </ol>
 
