adding a h2 and a paragraph

--- a/siteNoTwo/MainPge.html
+++ b/siteNoTwo/MainPge.html
@@ -18,11 +18,19 @@
 
         <img src="images/html-css.png" alt="HTML-CSS logo">
 
+          <h2>
+            HTML summary 
+          </h2>
+
+            <p>HTML(Hyper Text Markup Language) is used to define our page structure and mening. You dont use it for styleing purposes.
+               For that use CSS.
+           </p>
+
         </main>
 
          <footer>
 
-            
+
          </footer>
 
     
