adding a list and more paragraphs

--- a/siteNoTwo/MainPge.html
+++ b/siteNoTwo/MainPge.html
@@ -26,6 +26,39 @@
                For that use CSS.
            </p>
 
+           <ul>
+             <li>
+                <p>
+                    HTML uses elements to annotate content
+                </p>
+             </li>
+
+
+             <p>
+                 HTML elements typicaly have an opening tag, closing tag and content in between
+            </p>
+
+
+             <li>
+                You can also have void(empty) elements like images
+             </li>
+             <li>
+                <p>
+                    you can also configure elements with atributes
+                </p>
+             </li>
+
+             <p>
+                there is a lot of elements in HTML
+             </p>
+
+             <p>
+                here is a list of those <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element">elements</a>
+             </p>
+            
+            
+           </ul>
+
         </main>
 
          <footer>
