adding things to the footer

--- a/siteNoTwo/MainPge.html
+++ b/siteNoTwo/MainPge.html
@@ -115,6 +115,14 @@
 
          <footer>
 
+            <p id="pdf">
+                <a href="https://github.com/academind/100-days-of-web-development/blob/04-html-css-first-practice-summary/extra-files/html-css-basics-summary.pdf">The PDF summary</a>
+            </p>
+
+            <p id="company">
+                (c)Me
+            </p>
+
 
          </footer>
 
