styiling the links

--- a/siteNoTwo/MainPge.html
+++ b/siteNoTwo/MainPge.html
@@ -2,6 +2,12 @@
 <html lang="en"></html>
 <html>
    <head>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
+    
+
     <meta charset="UTF-8">
 
     <link href="styles/MPStyles.css" rel="stylesheet">
@@ -66,7 +72,7 @@
              </p>
 
              <p>
-                here is a list of those <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element">elements</a>
+                here is a list of those <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element">Elements</a>
              </p>
 
              <h2 id="HTwo">
@@ -115,12 +121,12 @@
 
          <footer>
 
-            <p id="pdf">
+            <p id="pdfLink">
                 <a href="https://github.com/academind/100-days-of-web-development/blob/04-html-css-first-practice-summary/extra-files/html-css-basics-summary.pdf">The PDF summary</a>
             </p>
 
             <p id="company">
-                (c)Me
+                (c) Me
             </p>
 
 
