making the text bold inside a paragraph

--- a/siteNoTwo/MainPge.html
+++ b/siteNoTwo/MainPge.html
@@ -33,7 +33,7 @@
             HTML summary 
            </h2> 
            
-           <p>HTML(Hyper Text Markup Language) is used to define our page structure and mening. You dont use it for styleing purposes.
+           <p>HTML(Hyper Text Markup Language) is used to define our page structure and mening. You <b>dont</b> use it for styleing purposes.
                For that use CSS.
            </p>
 
@@ -147,4 +147,4 @@
 
 
 
-</html>
+</html
