Making a new site

--- a/siteNoTwo/MainPge.html
+++ b/siteNoTwo/MainPge.html
@@ -10,7 +10,11 @@
 
     <meta charset="UTF-8">
 
+
     <link href="styles/MPStyles.css" rel="stylesheet">
+
+    <link href="imgs/favicon.ico" rel="icon" type="image/x-icon">
+
 
     <title>Course recap</title>
 
@@ -23,7 +27,7 @@
             HTML & CSS recap
         </h1>
 
-        <img src="images/html-css.png" alt="HTML-CSS logo">
+        <img src="imgs/html-css.png" alt="HTML-CSS logo">
         </header>
 
           <main>
