Creating the page structure

--- a/siteNoThree/Index.html
+++ b/siteNoThree/Index.html
@@ -6,13 +6,37 @@
 
      <link href="IndexStyles.css" rel="stylesheet">
 
+     <link
+     href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Oleo+Script:wght@700&family=Quicksand:wght@300;500;700&display=swap"
+     rel="stylesheet"
+   />
+
      <title> Travel Serbia </title>
   
 
     </head>
 
     <body>
+        
+        <head>
 
+        </head>
+
+        <min>
+            <section>
+
+            </section>
+
+            <section>
+
+            </section>
+
+        </min>
+
+
+        <footer>
+            
+        </footer>
 
 
     </body>
