adding a Logo for the site and giving it a font

--- a/siteNoThree/Index.html
+++ b/siteNoThree/Index.html
@@ -19,6 +19,9 @@
     <body>
         
         <head>
+            <div id="page-logo">
+                <a href="Index.html">Travel Serbia</a>
+            </div>
 
         </head>
 
@@ -35,7 +38,7 @@
 
 
         <footer>
-            
+
         </footer>
 
 
