adding a nav element and making a list in it

--- a/siteNoThree/Index.html
+++ b/siteNoThree/Index.html
@@ -23,6 +23,12 @@
                 <a href="Index.html">Travel Serbia</a>
             </div>
 
+            <nav>
+                <ul>
+                    <li><a href="destinations.html">Travel destinations</a></li>
+                </ul>
+            </nav>
+
         </head>
 
         <min>
