worging with the flex box and changing some code

--- a/siteNoThree/Index.html
+++ b/siteNoThree/Index.html
@@ -18,18 +18,19 @@
 
     <body>
         
-        <head>
+        <header>
             <div id="page-logo">
                 <a href="Index.html">Travel Serbia</a>
             </div>
 
             <nav>
                 <ul>
-                    <li><a href="destinations.html">Travel destinations</a></li>
+                    <li><p>pNoOne</p></li>
+                    <li><p>PNoTwo</p></li>
                 </ul>
             </nav>
 
-        </head>
+        </header>
 
         <min>
             <section>
