changing the color of the logo

--- a/siteNoThree/Index.html
+++ b/siteNoThree/Index.html
@@ -20,24 +20,24 @@
         
         <header>
             <div id="page-logo">
-                <a href="Index.html">Travel Serbia</a>
+                <a href="Index.html"><span style="color: red">Travel</span> <span style="color: blue">2</span> <span style="color: rgb(232, 233, 235);">Serbia</span> </a>
             </div>
 
             <nav>
                 <ul>
-                    <li><p>pNoOne</p></li>
-                    <li><p>PNoTwo</p></li>
+                    <li>Travel Destinations</li>
+                    <li>About</li>
                 </ul>
             </nav>
 
         </header>
 
         <min>
-            <section>
+            <section id="hero">
 
             </section>
 
-            <section>
+            <section id="highlights">
 
             </section>
 
