adding stuff to the first section

--- a/siteNoThree/Index.html
+++ b/siteNoThree/Index.html
@@ -35,6 +35,10 @@
         <min>
             <section id="hero">
 
+                <h1>Travel Serbia page</h1>
+
+                <a href="destinations.html">Explore</a>
+
             </section>
 
             <section id="highlights">
