--- a/siteNoThree/Index.html
+++ b/siteNoThree/Index.html
@@ -34,10 +34,14 @@
 
         <min>
             <section id="hero">
+                
+                <div id="hero-content">
 
                 <h1>Travel Serbia page</h1>
 
                 <a href="destinations.html">Explore</a>
+
+                </div>
 
             </section>
 
