--- a/siteNoThree/Index.html
+++ b/siteNoThree/Index.html
@@ -20,7 +20,7 @@
         
         <header>
             <div id="page-logo">
-                <a href="Index.html"><span style="color: red">Travel</span> <span style="color: blue">2</span> <span style="color: rgb(232, 233, 235);">Serbia</span> </a>
+                <a href="Index.html"><span style="color: rgb(198, 54, 60)">Travel</span> <span style="color: rgb(12, 64, 118)">2</span> <span style="color: rgb(232, 233, 235);">Serbia</span> </a>
             </div>
 
             <nav>
@@ -30,6 +30,7 @@
                 </ul>
             </nav>
 
+           
         </header>
 
         <min>
