--- a/siteNoThree/Index.html
+++ b/siteNoThree/Index.html
@@ -25,8 +25,8 @@
 
             <nav>
                 <ul>
-                    <li>Travel Destinations</li>
-                    <li>About</li>
+                    <li><a href="destinations.html">Travel Destinations</a></li>
+                    <li><a href="destinations.html">About</a></li>
                 </ul>
             </nav>
 
