--- a/siteNoThree/Index.html
+++ b/siteNoThree/Index.html
@@ -20,13 +20,13 @@
         
         <header>
             <div id="page-logo">
-                <a href="Index.html"><span style="color: rgb(198, 54, 60)">Travel</span> <span style="color: rgb(12, 64, 118)">2</span> <span style="color: rgb(232, 233, 235);">Serbia</span> </a>
+                <a id="logo-link" href="Index.html"><span style="color: rgb(198, 54, 60)">Travel</span> <span style="color: rgb(12, 64, 118)">2</span> <span style="color: rgb(232, 233, 235);">Serbia</span> </a>
             </div>
 
             <nav>
                 <ul>
-                    <li><a href="destinations.html">Travel Destinations</a></li>
-                    <li><a href="destinations.html">About</a></li>
+                    <li><a id="info-link" href="destinations.html">Travel Destinations</a></li>
+                    <li><a id="info-link" href="destinations.html">About</a></li>
                 </ul>
             </nav>
 
