adding destination photos to the Highlights section

--- a/siteNoThree/Index.html
+++ b/siteNoThree/Index.html
@@ -47,6 +47,22 @@
             </section>
 
             <section id="highlights">
+                <h2>Highlights</h2>
+
+                <ul>
+                    <li class="Destination">
+                        <img src="/siteNoThree/Images/Pics/Belgrade.png" alt="Belgrade at night">
+                        <p> <strong>Belgrade</strong> </p>
+                    </li>
+                    <li class="Destination">
+                        <img src="/siteNoThree/Images/Pics/NS.png" alt="Novi Sad">
+                        <p> <strong>Novi Sad</strong> </p>
+                    </li>
+                    <li class="Destination">
+                        <img src="/siteNoThree/Images/Pics/nis.png" alt="Nis">
+                        <p> <strong>Nis</strong ></p>
+                    </li>
+                </ul>
 
             </section>
 
