adding the destination pictures to the site

--- a/siteNoThree/Index.html
+++ b/siteNoThree/Index.html
@@ -48,22 +48,30 @@
 
             <section id="highlights">
                 <h2>Highlights</h2>
-
-                <ul>
-                    <li class="Destination">
-                        <img src="/siteNoThree/Images/Pics/Belgrade.png" alt="Belgrade at night">
-                        <p> <strong>Belgrade</strong> </p>
+                  
+                <ul id="destinations">
+                    <li class="destination">
+                      <img
+                        src="images/Pics/Belgrade.png"
+                        alt="Belgrade at night"
+                      />
+                      <p><strong>Belgrade</strong></p>
                     </li>
-                    <li class="Destination">
-                        <img src="/siteNoThree/Images/Pics/NS.png" alt="Novi Sad">
-                        <p> <strong>Novi Sad</strong> </p>
+                    <li class="destination">
+                      <img
+                        src="images/Pics/NS.png"
+                        alt="Novi sad"
+                      />
+                      <p><strong>Novi Sad</strong></p>
                     </li>
-                    <li class="Destination">
-                        <img src="/siteNoThree/Images/Pics/nis.png" alt="Nis">
-                        <p> <strong>Nis</strong ></p>
+                    <li class="destination">
+                      <img
+                        src="images/Pics/nis.png"
+                        alt="Nis"
+                      />
+                      <p><strong>Nis</strong></p>
                     </li>
-                </ul>
-
+                  </ul>
             </section>
 
         </min>
