adding content and styling the footer

--- a/siteNoThree/Index.html
+++ b/siteNoThree/Index.html
@@ -79,6 +79,20 @@
 
         <footer>
 
+          <ul>
+            <li>
+              <a href="https://www.instagram.com/">
+                <img src="Images/icons/insta.png" alt="insta logo">
+              </a>
+            </li>
+
+            <li>
+              <a href="https://www.facebook.com/">
+                <img src="Images/icons/facebook.png" alt="facebook logo">
+              </a>
+            </li>
+          </ul>
+
         </footer>
 
 
