--- a/siteNoThree/destinations.html
+++ b/siteNoThree/destinations.html
@@ -33,4 +33,27 @@
            
         </header>
 
-        <main></main>
+        <main>
+         
+        </main>
+
+        <footer>
+
+            <ul>
+              <li>
+                <a href="https://www.instagram.com/">
+                  <img src="Images/icons/insta.png" alt="insta logo">
+                </a>
+              </li>
+  
+              <li>
+                <a href="https://www.facebook.com/">
+                  <img src="Images/icons/facebook.png" alt="facebook logo">
+                </a>
+              </li>
+            </ul>
+  
+          </footer>
+    </body>
+
+</html>
