--- a/siteNoThree/Index.html
+++ b/siteNoThree/Index.html
@@ -4,7 +4,7 @@
 
      <meta charset="UTF-8">
 
-     <link href="IndexStyles.css" rel="stylesheet">
+     <link href="/siteNoThree/styles/IndexStyles.css" rel="stylesheet">
 
      <link
      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Oleo+Script:wght@700&family=Quicksand:wght@300;500;700&display=swap"
