styling the background of the body

--- a/siteNoThree/destinations.html
+++ b/siteNoThree/destinations.html
@@ -17,7 +17,7 @@
 
     </head>
 
-    <body>
+    <body id="destinationBody"> 
         
         <header id="destinationHeader">
             <div id="page-logo">
