--- a/siteNoThree/destinations.html
+++ b/siteNoThree/destinations.html
@@ -41,15 +41,18 @@
             <img src="/siteNoThree/Images/Pics/Belgrade.png" alt="city of Belgrade">
 
         <div class="item-content">
+
+        <div>
             <h2>
                 Belgrade
             </h2>
 
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-             Ab vero illo dolorem quam reprehenderit, magnam iusto odit, voluptates quas ullam suscipit!
-             Placeat tempore aut magni esse commodi maxime facere distinctio.
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
           </p>  
-          
+        
+        </div>
+
         <div class="actions">
           <a href="https://www.google.com/maps/search/%D0%91%D0%B5%D0%BE%D0%B3%D1%80%D0%B0%D0%B4+tourist+sites/@44.8186793,20.4268082,13.17z">Explore</a>
         </div>
