adding more destinations

--- a/siteNoThree/destinations.html
+++ b/siteNoThree/destinations.html
@@ -37,325 +37,113 @@
         <main id="destinationMain">
           <ul>
             <li>
-              <img src="images/places/barcelona.jpg" alt="City of Barcelona" />
+              <img src="/siteNoThree/Images/Pics/Belgrade.png" alt="City of Belgrade" />
               <div class="item-content">
                 <div>
-                  <h2>Barcelona</h2>
+                  <h2>Belgrade</h2>
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
                     vitae incidunt eos atque dicta natus quam accusantium placeat.
                   </p>
                 </div>
                 <div class="actions">
-                  <a href="https://en.wikipedia.org/wiki/Barcelona">Explore &#x2192</a>
+                  <a href="https://www.google.com/maps/search/%D0%91%D0%B5%D0%BE%D0%B3%D1%80%D0%B0%D0%B4+tourist+sights/@44.8139137,20.4033159,12.5z">Explore &#x2192</a>
                 </div>
               </div>
             </li>
             <li>
-              <img src="images/places/hawaii.jpg" alt="Hawaii beach" />
+              <img src="/siteNoThree/Images/Pics/NS.png" alt="City of Novi Sad" />
               <div class="item-content">
                 <div>
-                  <h2>Hawaii</h2>
+                  <h2>Novi Sad</h2>
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
                     vitae incidunt eos atque dicta natus quam accusantium placeat.
                   </p>
                 </div>
                 <div class="actions">
-                  <a href="hhttps://en.wikipedia.org/wiki/Hawaii">Explore &#x2192</a>
+                  <a href="https://www.google.com/maps/search/Novi+Sad+tourist+sights/@45.2490597,19.8292671,14z/data=!3m1!4b1">Explore &#x2192</a>
                 </div>
               </div>
             </li>
             <li>
-              <img src="images/places/london.jpg" alt="London city" />
+              <img src="/siteNoThree/Images/Pics/download.jpeg" alt="city of Subotica" />
               <div class="item-content">
                 <div>
-                  <h2>London</h2>
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
-                    vitae incidunt eos atque dicta natus quam accusantium placeat.
-                  </p>
+                  <h2>Subotica</h2>
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
                     vitae incidunt eos atque dicta natus quam accusantium placeat.
                   </p>
                 </div>
                 <div class="actions">
-                  <a href="https://en.wikipedia.org/wiki/London">Explore &#x2192</a>
+                  <a href="https://www.google.com/maps/search/tourist+places+%D1%83+%D0%B1%D0%BB%D0%B8%D0%B7%D0%B8%D0%BD%D0%B8+%D0%A1%D1%83%D0%B1%D0%BE%D1%82%D0%B8%D1%86%D0%B0,+%D0%A1%D1%80%D0%B1%D0%B8%D1%98%D0%B0/@46.094121,19.5340353,11z/data=!3m1!4b1">Explore &#x2192</a>
                 </div>
               </div>
             </li>
             <li>
-              <img src="images/places/miami.jpg" alt="Miami streets" />
+              <img src="/siteNoThree/Images/Pics/nis.png" alt="City of Nis" />
               <div class="item-content">
                 <div>
-                  <h2>Miami</h2>
+                  <h2>Nis</h2>
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
                     vitae incidunt eos atque dicta natus quam accusantium placeat.
                   </p>
                 </div>
                 <div class="actions">
-                  <a href="https://en.wikipedia.org/wiki/Miami">Explore &#x2192</a>
+                  <a href="https://www.google.com/maps/search/tourist+places+%D1%83+%D0%B1%D0%BB%D0%B8%D0%B7%D0%B8%D0%BD%D0%B8+Ni%C5%A1,+%D0%A1%D1%80%D0%B1%D0%B8%D1%98%D0%B0/@43.3053628,21.8555415,12z">Explore &#x2192</a>
                 </div>
               </div>
             </li>
             <li>
-              <img src="images/places/munich.jpg" alt="Munich football stadium" />
+              <img src="/siteNoThree/Images/Pics/novi-pazar.webp" alt="City of Novi Pazar"/>
               <div class="item-content">
                 <div>
-                  <h2>Munich</h2>
+                  <h2>Novi Pazar</h2>
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
                     vitae incidunt eos atque dicta natus quam accusantium placeat.
                   </p>
                 </div>
                 <div class="actions">
-                  <a href="https://en.wikipedia.org/wiki/Munich">Explore &#x2192</a>
+                  <a href="https://www.google.com/maps/search/Tourist+places+novi+pazar/@43.1376165,20.5070612,15z/data=!3m1!4b1">Explore &#x2192</a>
                 </div>
               </div>
             </li>
             <li>
-              <img src="images/places/new-york-city.jpg" alt="New York City skyline" />
+              <img src="/siteNoThree/Images/Pics/Kopaonik.jpeg" alt="Kopaonik Mountin" />
               <div class="item-content">
                 <div>
-                  <h2>New York City</h2>
+                  <h2>Kopaonik</h2>
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
                     vitae incidunt eos atque dicta natus quam accusantium placeat.
                   </p>
                 </div>
                 <div class="actions">
-                  <a href="https://en.wikipedia.org/wiki/New_York_City"
+                  <a href="https://www.google.com/maps/place/%D0%9A%D0%BE%D0%BF%D0%B0%D0%BE%D0%BD%D0%B8%D0%BA/@43.2680594,20.817554,15z/data=!3m1!4b1!4m6!3m5!1s0x47563d7f99fccf2f:0x7e60d90e21e4ae77!8m2!3d43.2680447!4d20.8263088!16zL20vMDk3Ym16"
                     >Explore &#x2192</a
                   >
                 </div>
               </div>
             </li>
             <li>
-              <img src="images/places/paris.jpg" alt="Paris city" />
+              <img src="/siteNoThree/Images/Pics/Zlatibor.jpeg" alt="Zlatibor Mountin" />
               <div class="item-content">
                 <div>
-                  <h2>Paris</h2>
+                  <h2>Zlatibor</h2>
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
                     vitae incidunt eos atque dicta natus quam accusantium placeat.
                   </p>
                 </div>
                 <div class="actions">
-                  <a href="https://en.wikipedia.org/wiki/Paris">Explore &#x2192</a>
-                </div>
-              </div>
-            </li>
-            <li>
-              <img src="images/places/sydney.jpg" alt="Sydney beach" />
-              <div class="item-content">
-                <div>
-                  <h2>Sydney</h2>
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
-                    vitae incidunt eos atque dicta natus quam accusantium placeat.
-                  </p>
-                </div>
-                <div class="actions">
-                  <a href="https://en.wikipedia.org/wiki/Sydney">Explore &#x2192</a>
-                </div>
-              </div>
-            </li>
-            <li>
-              <img src="images/places/tokyo.jpg" alt="Tokyo skyline" />
-              <div class="item-content">
-                <div>
-                  <h2>Tokyo</h2>
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
-                    vitae incidunt eos atque dicta natus quam accusantium placeat.
-                  </p>
-                </div>
-                <div class="actions">
-                  <a href="https://en.wikipedia.org/wiki/Tokyo">Explore &#x2192</a>
-                </div>
-              </div>
-            </li>
-            <li>
-              <img src="images/places/bali.jpg" alt="Bali beach" />
-              <div class="item-content">
-                <div>
-                  <h2>Bali</h2>
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
-                    vitae incidunt eos atque dicta natus quam accusantium placeat.
-                  </p>
-                </div>
-                <div class="actions">
-                  <a href="https://en.wikipedia.org/wiki/Bali">Explore &#x2192</a>
+                  <a href="https://www.google.com/maps/place/%D0%97%D0%BB%D0%B0%D1%82%D0%B8%D0%B1%D0%BE%D1%80,+%D0%A1%D1%80%D0%B1%D0%B8%D1%98%D0%B0/@43.7039083,19.6394323,12z/data=!3m1!4b1!4m6!3m5!1s0x47582f8f84661877:0x43364460a56d557c!8m2!3d43.7304492!4d19.6982165!16s%2Fm%2F025vqvz">Explore &#x2192</a>
                 </div>
               </div>
             </li>
           </ul>
-    Footer
-    © 2023 GitHub, Inc.
-    Footer navigation
-    Terms
-    Privacy
-    <ul>
-      <li>
-        <img src="images/places/barcelona.jpg" alt="City of Barcelona" />
-        <div class="item-content">
-          <div>
-            <h2>Barcelona</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
-              vitae incidunt eos atque dicta natus quam accusantium placeat.
-            </p>
-          </div>
-          <div class="actions">
-            <a href="https://en.wikipedia.org/wiki/Barcelona">Explore &#x2192</a>
-          </div>
-        </div>
-      </li>
-      <li>
-        <img src="images/places/hawaii.jpg" alt="Hawaii beach" />
-        <div class="item-content">
-          <div>
-            <h2>Hawaii</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
-              vitae incidunt eos atque dicta natus quam accusantium placeat.
-            </p>
-          </div>
-          <div class="actions">
-            <a href="hhttps://en.wikipedia.org/wiki/Hawaii">Explore &#x2192</a>
-          </div>
-        </div>
-      </li>
-      <li>
-        <img src="images/places/london.jpg" alt="London city" />
-        <div class="item-content">
-          <div>
-            <h2>London</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
-              vitae incidunt eos atque dicta natus quam accusantium placeat.
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
-              vitae incidunt eos atque dicta natus quam accusantium placeat.
-            </p>
-          </div>
-          <div class="actions">
-            <a href="https://en.wikipedia.org/wiki/London">Explore &#x2192</a>
-          </div>
-        </div>
-      </li>
-      <li>
-        <img src="images/places/miami.jpg" alt="Miami streets" />
-        <div class="item-content">
-          <div>
-            <h2>Miami</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
-              vitae incidunt eos atque dicta natus quam accusantium placeat.
-            </p>
-          </div>
-          <div class="actions">
-            <a href="https://en.wikipedia.org/wiki/Miami">Explore &#x2192</a>
-          </div>
-        </div>
-      </li>
-      <li>
-        <img src="images/places/munich.jpg" alt="Munich football stadium" />
-        <div class="item-content">
-          <div>
-            <h2>Munich</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
-              vitae incidunt eos atque dicta natus quam accusantium placeat.
-            </p>
-          </div>
-          <div class="actions">
-            <a href="https://en.wikipedia.org/wiki/Munich">Explore &#x2192</a>
-          </div>
-        </div>
-      </li>
-      <li>
-        <img src="images/places/new-york-city.jpg" alt="New York City skyline" />
-        <div class="item-content">
-          <div>
-            <h2>New York City</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
-              vitae incidunt eos atque dicta natus quam accusantium placeat.
-            </p>
-          </div>
-          <div class="actions">
-            <a href="https://en.wikipedia.org/wiki/New_York_City"
-              >Explore &#x2192</a
-            >
-          </div>
-        </div>
-      </li>
-      <li>
-        <img src="images/places/paris.jpg" alt="Paris city" />
-        <div class="item-content">
-          <div>
-            <h2>Paris</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
-              vitae incidunt eos atque dicta natus quam accusantium placeat.
-            </p>
-          </div>
-          <div class="actions">
-            <a href="https://en.wikipedia.org/wiki/Paris">Explore &#x2192</a>
-          </div>
-        </div>
-      </li>
-      <li>
-        <img src="images/places/sydney.jpg" alt="Sydney beach" />
-        <div class="item-content">
-          <div>
-            <h2>Sydney</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
-              vitae incidunt eos atque dicta natus quam accusantium placeat.
-            </p>
-          </div>
-          <div class="actions">
-            <a href="https://en.wikipedia.org/wiki/Sydney">Explore &#x2192</a>
-          </div>
-        </div>
-      </li>
-      <li>
-        <img src="images/places/tokyo.jpg" alt="Tokyo skyline" />
-        <div class="item-content">
-          <div>
-            <h2>Tokyo</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
-              vitae incidunt eos atque dicta natus quam accusantium placeat.
-            </p>
-          </div>
-          <div class="actions">
-            <a href="https://en.wikipedia.org/wiki/Tokyo">Explore &#x2192</a>
-          </div>
-        </div>
-      </li>
-      <li>
-        <img src="images/places/bali.jpg" alt="Bali beach" />
-        <div class="item-content">
-          <div>
-            <h2>Bali</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
-              vitae incidunt eos atque dicta natus quam accusantium placeat.
-            </p>
-          </div>
-          <div class="actions">
-            <a href="https://en.wikipedia.org/wiki/Bali">Explore &#x2192</a>
-          </div>
-        </div>
-      </li>
-    </ul>
         </main>
 
         <footer>
