Organizing the cards

--- a/siteNoThree/Index.html
+++ b/siteNoThree/Index.html
@@ -52,21 +52,21 @@
                 <ul id="destinations">
                     <li class="destination">
                       <img
-                        src="images/Pics/Belgrade.png"
+                        src="/siteNoThree/Images/Pics/Belgrade.png"
                         alt="Belgrade at night"
                       />
                       <p><strong>Belgrade</strong></p>
                     </li>
                     <li class="destination">
                       <img
-                        src="images/Pics/NS.png"
+                        src="/siteNoThree/Images/Pics/NS.png"
                         alt="Novi sad"
                       />
                       <p><strong>Novi Sad</strong></p>
                     </li>
                     <li class="destination">
                       <img
-                        src="images/Pics/nis.png"
+                        src="/siteNoThree/Images/Pics/nis.png"
                         alt="Nis"
                       />
                       <p><strong>Nis</strong></p>
