--- a/siteNoThree/destinations.html
+++ b/siteNoThree/destinations.html
@@ -47,7 +47,7 @@
                   </p>
                 </div>
                 <div class="actions">
-                  <a href="https://www.google.com/maps/search/%D0%91%D0%B5%D0%BE%D0%B3%D1%80%D0%B0%D0%B4+tourist+sights/@44.8139137,20.4033159,12.5z">Explore &#x2192</a>
+                  <a href="https://www.google.com/maps/search/%D0%91%D0%B5%D0%BE%D0%B3%D1%80%D0%B0%D0%B4+tourist+sights/@44.8139137,20.4033159,12.5z">Explore &#x21A6</a>
                 </div>
               </div>
             </li>
@@ -62,7 +62,7 @@
                   </p>
                 </div>
                 <div class="actions">
-                  <a href="https://www.google.com/maps/search/Novi+Sad+tourist+sights/@45.2490597,19.8292671,14z/data=!3m1!4b1">Explore &#x2192</a>
+                  <a href="https://www.google.com/maps/search/Novi+Sad+tourist+sights/@45.2490597,19.8292671,14z/data=!3m1!4b1">Explore &#x21A6</a>
                 </div>
               </div>
             </li>
@@ -77,7 +77,7 @@
                   </p>
                 </div>
                 <div class="actions">
-                  <a href="https://www.google.com/maps/search/tourist+places+%D1%83+%D0%B1%D0%BB%D0%B8%D0%B7%D0%B8%D0%BD%D0%B8+Ni%C5%A1,+%D0%A1%D1%80%D0%B1%D0%B8%D1%98%D0%B0/@43.3053628,21.8555415,12z">Explore &#x2192</a>
+                  <a href="https://www.google.com/maps/search/tourist+places+%D1%83+%D0%B1%D0%BB%D0%B8%D0%B7%D0%B8%D0%BD%D0%B8+Ni%C5%A1,+%D0%A1%D1%80%D0%B1%D0%B8%D1%98%D0%B0/@43.3053628,21.8555415,12z">Explore &#x21A6</a>
                 </div>
               </div>
             </li>
@@ -92,7 +92,7 @@
                   </p>
                 </div>
                 <div class="actions">
-                  <a href="https://www.google.com/maps/search/tourist+places+%D1%83+%D0%B1%D0%BB%D0%B8%D0%B7%D0%B8%D0%BD%D0%B8+%D0%A1%D1%83%D0%B1%D0%BE%D1%82%D0%B8%D1%86%D0%B0,+%D0%A1%D1%80%D0%B1%D0%B8%D1%98%D0%B0/@46.094121,19.5340353,11z/data=!3m1!4b1">Explore &#x2192</a>
+                  <a href="https://www.google.com/maps/search/tourist+places+%D1%83+%D0%B1%D0%BB%D0%B8%D0%B7%D0%B8%D0%BD%D0%B8+%D0%A1%D1%83%D0%B1%D0%BE%D1%82%D0%B8%D1%86%D0%B0,+%D0%A1%D1%80%D0%B1%D0%B8%D1%98%D0%B0/@46.094121,19.5340353,11z/data=!3m1!4b1">Explore &#x21A6</a>
                 </div>
               </div>
             </li>
@@ -107,7 +107,7 @@
                   </p>
                 </div>
                 <div class="actions">
-                  <a href="https://www.google.com/maps/search/Tourist+places+novi+pazar/@43.1376165,20.5070612,15z/data=!3m1!4b1">Explore &#x2192</a>
+                  <a href="https://www.google.com/maps/search/Tourist+places+novi+pazar/@43.1376165,20.5070612,15z/data=!3m1!4b1">Explore &#x21A6</a>
                 </div>
               </div>
             </li>
@@ -123,7 +123,7 @@
                 </div>
                 <div class="actions">
                   <a href="https://www.google.com/maps/place/%D0%9A%D0%BE%D0%BF%D0%B0%D0%BE%D0%BD%D0%B8%D0%BA/@43.2680594,20.817554,15z/data=!3m1!4b1!4m6!3m5!1s0x47563d7f99fccf2f:0x7e60d90e21e4ae77!8m2!3d43.2680447!4d20.8263088!16zL20vMDk3Ym16"
-                    >Explore &#x2192</a
+                    >Explore &#x21A6</a
                   >
                 </div>
               </div>
@@ -139,7 +139,7 @@
                   </p>
                 </div>
                 <div class="actions">
-                  <a href="https://www.google.com/maps/place/%D0%97%D0%BB%D0%B0%D1%82%D0%B8%D0%B1%D0%BE%D1%80,+%D0%A1%D1%80%D0%B1%D0%B8%D1%98%D0%B0/@43.7039083,19.6394323,12z/data=!3m1!4b1!4m6!3m5!1s0x47582f8f84661877:0x43364460a56d557c!8m2!3d43.7304492!4d19.6982165!16s%2Fm%2F025vqvz">Explore &#x2192</a>
+                  <a href="https://www.google.com/maps/place/%D0%97%D0%BB%D0%B0%D1%82%D0%B8%D0%B1%D0%BE%D1%80,+%D0%A1%D1%80%D0%B1%D0%B8%D1%98%D0%B0/@43.7039083,19.6394323,12z/data=!3m1!4b1!4m6!3m5!1s0x47582f8f84661877:0x43364460a56d557c!8m2!3d43.7304492!4d19.6982165!16s%2Fm%2F025vqvz">Explore &#x21A6</a>
                 </div>
               </div>
             </li>
