finnishing the project

--- a/siteNoThree/destinations.html
+++ b/siteNoThree/destinations.html
@@ -72,8 +72,9 @@
                 <div>
                   <h2>Nis</h2>
                   <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
-                    vitae incidunt eos atque dicta natus quam accusantium placeat.
+                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab delectus voluptatum corporis quasi explicabo amet voluptas nemo iusto exercitationem alias! Ratione repudiandae quam error molestias, sit in distinctio cumque eius.
+                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia iure ut odio, amet beatae sunt distinctio officia temporibus ipsam cupiditate quisquam expedita recusandae laborum similique nihil voluptates, ipsa corrupti ullam!
+                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut voluptate repellendus necessitatibus sed ut perspiciatis modi atque iste odio ex quaerat harum ratione suscipit laboriosam ullam numquam, aperiam assumenda molestiae!
                   </p>
                 </div>
                 <div class="actions">
