adding changes to the third site

--- a/siteNoThree/destinations.html
+++ b/siteNoThree/destinations.html
@@ -83,7 +83,7 @@
               </div>
             </li>
             <li>
-              <img src="/siteNoThree/Images/Pics/download.jpeg" alt="city of Subotica" />
+              <img src="/siteNoThree/Images/Pics/Subotica.jpeg" alt="city of Subotica" />
               <div class="item-content">
                 <div>
                   <h2>Subotica</h2>
@@ -98,7 +98,7 @@
               </div>
             </li>
             <li>
-              <img src="/siteNoThree/Images/Pics/novi-pazar.webp" alt="City of Novi Pazar"/>
+              <img src="/siteNoThree/Images/Pics/novi-pazar.png" alt="City of Novi Pazar"/>
               <div class="item-content">
                 <div>
                   <h2>Novi Pazar</h2>
