adding content to the header

--- a/siteNoFour/index.html
+++ b/siteNoFour/index.html
@@ -12,7 +12,23 @@
 
     <body>
         
-        <header>
+        <header id="main_header">
+
+            <a href="index.html" id="logo"> 
+                Webfood
+            </a>
+
+         <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Browse Food</a>
+                </li>
+
+                <li>
+                    <a href="index.html">MyOrder</a>
+                </li>
+            </ul>
+        </nav>
 
         </header>
 
