adding contnet to the main

--- a/siteNoFour/index.html
+++ b/siteNoFour/index.html
@@ -34,6 +34,31 @@
 
         <main>
             
+            <h1>Browse our Foods</h1>
+        
+        <section id="productus">
+            <ul>
+                <li id="food-items">
+                    <article>
+                            <img src="/siteNoFour/images/TurkishL.jpeg" alt="Doner">
+                         <div class="food-selection">
+                            <h2>Doner</h2>
+                            <a href="index.html" class="btn">Add to Cart</a>
+                        </div>
+                    </article>
+                </li>
+
+                <li id="food-items">
+                    <article>
+                            <img src="/siteNoFour/images/AmericanL.jpeg" alt="Cheesburger">
+                         <div class="food-selection">
+                            <h2>Cheesburger & fries</h2>
+                            <a href="index.html" class="btn">Add to Cart</a>
+                        </div>
+                    </article>
+                </li>
+            </ul>
+        </section>
 
         </main>
 
