adding a css file and importing a font

--- a/siteNoFour/index.html
+++ b/siteNoFour/index.html
@@ -7,6 +7,14 @@
 
     <title>Webfood</title>
 
+    <link rel="stylesheet" href="/siteNoFour/styles/indexStyless.css">
+
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;500&display=swap" rel="stylesheet">
+    
+
 
     </head>
 
