styling the main

--- a/siteNoFour/index.html
+++ b/siteNoFour/index.html
@@ -44,7 +44,7 @@
             
             <h1>Browse our Foods</h1>
         
-        <section id="productus">
+        <section id="products">
             <ul>
                 <li id="food-items">
                     <article>
