--- a/siteNoFour/index.html
+++ b/siteNoFour/index.html
@@ -38,6 +38,12 @@
             </ul>
         </nav>
 
+        <a href="index.html" class="burgerBtn">
+            <span></span>
+            <span></span>
+            <span></span>
+        </a>
+
         </header>
 
         <main>
