--- a/siteNoFour/index.html
+++ b/siteNoFour/index.html
@@ -46,6 +46,23 @@
 
         </header>
 
+        <aside id="sideDrawer">
+
+            
+         <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Browse Food</a>
+                </li>
+
+                <li>
+                    <a href="index.html">MyOrder</a>
+                </li>
+            </ul>
+        </nav>
+
+        </aside>
+
         <main>
             
             <h1>Browse our Foods</h1>
