--- a/siteNoFive/index.html
+++ b/siteNoFive/index.html
@@ -8,9 +8,10 @@
 </head>
 
 <body>
-
-   <input type="text">
-   <button>ADD</button>
+   <form action="/user.data" method="get">
+      <input type="text">
+      <button>ADD</button>
+   </form>
 
 </body>
 
