styling the form

--- a/siteNoFive/index.html
+++ b/siteNoFive/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-   <form action="/user.data" method="get">
+   <form action="/user.data" method="post">
       <input type="text">
       <button>ADD</button>
    </form>
