--- a/siteNoFive/index.html
+++ b/siteNoFive/index.html
@@ -9,7 +9,8 @@
 
 <body>
    <form action="/user.data" method="post">
-      <input type="text">
+      <label for="UName">Ur name</label>
+      <input type="text" id="UName">
       <button>ADD</button>
    </form>
 
