adding more input and labels

--- a/siteNoFive/index.html
+++ b/siteNoFive/index.html
@@ -11,7 +11,13 @@
    <form action="/user.data" method="post">
       <label for="UName">Ur name</label>
       <input type="text" id="UName">
-      <button>ADD</button>
+      <label for="UEmail">Ur email</label>
+      <input type="email" name="user-email" id="UEmail">
+      <label for="UAge">Ur age</label>
+      <input type="number" name="user-age" id="UAge">
+      <label for="UPassword">Ur password</label>
+      <input type="password" name="user-password" id="UPassword">
+      <label for="UBD">Ur birthdate</label>
    </form>
 
 </body>
