--- a/siteNoFive/index.html
+++ b/siteNoFive/index.html
@@ -17,7 +17,15 @@
       <input type="number" name="user-age" id="UAge">
       <label for="UPassword">Ur password</label>
       <input type="password" name="user-password" id="UPassword">
-      <label for="UBD">Ur birthdate</label>
+      <hr>
+      <h2>How can we verify ur account?</h2>
+      <input type="radio" name="VMessage" id="message">
+      <label for="message">SMS</label>
+      <input type="radio" name="VEmail" id="email">
+      <label for="email">Email</label>
+      <input type="radio" name="VPhone" id="phone">
+      <label for="phone">Phone call</label>
+      <button>ADD</button>
    </form>
 
 </body>
